finished w/o bonus missions

--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -36,7 +36,7 @@
         </tr>
         <tr>
             <td>Skill</td>
-            <td><a th:href="@{/list/jobs(column=coreCompetency,value=${job.geCoreCompetency()})}" th:text="${job.geCoreCompetency()}"></a></td>
+            <td><a th:href="@{/list/jobs(column=coreCompetency,value=${job.getCoreCompetency()})}" th:text="${job.getCoreCompetency()}"></a></td>
         </tr>
 
     </table>
